--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "node-sass -w sass/style.scss -o css --recursive"
+		"start": "node-sass -w sass/style.scss -o css --recursive",
+		"deploy": "gh-pages -d dist"
 	},
 	"author": "Josh Arrants",
 	"license": "MIT",
+	"homepage": "https://joshdrumz.github.io/GitFetchRepos",
 	"devDependencies": {
 		"bootstrap": "^4.3.1",
 		"node-sass": "^4.11.0"
+	},
+	"dependencies": {
+		"gh-pages": "^2.0.1"
 	}
 }
